Fix: changed text color for better visibility

--- a/about.css
+++ b/about.css
@@ -1,8 +1,8 @@
 body {
   margin: 0;
   font-family: 'Segoe UI', sans-serif;
-  background: #f4f9f4;
-  color: #1c1c1c;
+  background: white;
+  color:  #133533;
 }
 
 .container {
